--- a/divergencias.html
+++ b/divergencias.html
@@ -7,9 +7,7 @@
   <title>CIC - Controle Inteligente de compensações</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <a href="index.html">
     <link rel="shortcut icon" href="./images/logo-cic-controle.9aa6482f.svg" />
-  </a>
 
   <!-- Chamada para o Google Fonts! -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -57,7 +55,7 @@
             <a class="nav-link fw-medium hoverGreenHeader" href="#">Controle</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-medium hoverGreenHeader" href="/divergencias.html">Divergência</a>
+            <a class="nav-link fw-medium hoverGreenHeader" href="">Divergência</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-medium hoverGreenHeader" href="#">Arquivo</a>
@@ -68,9 +66,17 @@
         </ul>
       </div>
       <form class="headerIconList d-flex" role="search">
-        <div class="tooltip-header"><a href=""><i class="fa-solid fa-circle-question px-2 hoverGreenHeader"></i></a><span class="tooltiptext">FAQ</span></div>
-        <div class="tooltip-header"><a href=""><i class="fa-solid headerIcon fa-user px-2 hoverGreenHeader"></i></a><span class="tooltiptext">Usuário</span></div>
-        
+
+        <div class="tooltip-header"><a href="/divergencias.html"><i class="fa-solid fa-file-invoice-dollar px-2 hoverGreenHeader"></i></a><span
+            class="tooltiptext"> Sumário de divergências</span>
+        </div>
+        <div class="tooltip-header"><a href=""><i
+              class="fa-solid fa-circle-question px-2 hoverGreenHeader"></i></a><span class="tooltiptext">FAQ</span>
+        </div>
+        <div class="tooltip-header"><a href=""><i
+              class="fa-solid headerIcon fa-user px-2 hoverGreenHeader"></i></a><span class="tooltiptext">Usuário</span>
+        </div>
+
       </form>
     </div>
   </nav>
@@ -78,10 +84,13 @@
     <p>Na CIC, você é o herói da sua jornada rumo à excelência.</p>
     <div class="dropdown w-100">
       <div id="theme-switch">
-        <i class="fa-solid fa-moon"></i>
-        <i class="fa-solid fa-sun"></i>
+        <div class="tooltip-icon"><i id="darkMode" class="fa-solid fa-moon"></i><span class="tooltiptext">Modo
+            noturno</span></div>
+        <i id="lightMode" class="fa-solid fa-sun"></i>
       </div>
-      <i class="fa-solid fa-filter dropbtn filtro hoverFilterIcon" onclick="myFunction()"></i>
+
+
+      <div class="tooltip-icon"><i class="fa-solid fa-filter dropbtn filtro hoverFilterIcon" onclick="myFunction()"></i><span class="tooltiptext">Filtros</span></div>
       <div id="myDropdown" class="dropdown-content">
         <input type="text" placeholder="Pesquisar..." id="myInput" onkeyup="filterFunction()" />
         <a href="">Por Unidade</a>
